Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="collective-factorization-for-relational-data-an-evaluation-on-the-yelp-datasets" class="anchor" href="#collective-factorization-for-relational-data-an-evaluation-on-the-yelp-datasets" aria-hidden="true"><span class="octicon octicon-link"></span></a>Collective Factorization for Relational Data: An Evaluation on the Yelp Datasets</h1>
+<a id="collective-factorization-for-relational-data" class="anchor" href="#collective-factorization-for-relational-data" aria-hidden="true"><span class="octicon octicon-link"></span></a>Collective Factorization for Relational Data</h1>
 
 <h4>
 <a id="project-contributors" class="anchor" href="#project-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project Contributors</h4>
 
 <ul>
-<li>Nitish Gupta</li>
+<li>Nitish Gupta<br>
+</li>
 <li>Sameer Singh</li>
 </ul>
 
 <h1>
-<a id="collective-factorization-for-relational-data" class="anchor" href="#collective-factorization-for-relational-data" aria-hidden="true"><span class="octicon octicon-link"></span></a>Collective Factorization for Relational Data</h1>
+<a id="collective-factorization-for-relational-data-1" class="anchor" href="#collective-factorization-for-relational-data-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Collective Factorization for Relational Data</h1>
 
 <p>In this project we present a collective factorization framework for relational data to predict all relations in the database by collectively modelling all relations in the database, even though they maybe inaccurate and partially-observed. </p>
 
