Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </ul>
 
 <h3>
-<a id="the-report-for-the-project-can-be-found-here" class="anchor" href="#the-report-for-the-project-can-be-found-here" aria-hidden="true"><span class="octicon octicon-link"></span></a>The report for the project can be found <a href="http://nitishgupta.github.io/docs/gupta-factordb.pdf">here</a>
+<a id="the-report-for-the-project-can-be-found-here" class="anchor" href="#the-report-for-the-project-can-be-found-here" aria-hidden="true"><span class="octicon octicon-link"></span></a>The report for the project can be found <a href="http://nitishgupta.github.io/docs/yelp-factordb.pdf">here</a>
 </h3>
       </section>
     </div>
@@ -65,7 +65,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">factorDB maintained by <a href="https://github.com/nitishgupta">nitishgupta</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
