--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </ul>
 
 <h3>
-<a id="the-report-for-the-project-can-be-found-here" class="anchor" href="#the-report-for-the-project-can-be-found-here" aria-hidden="true"><span class="octicon octicon-link"></span></a>The report for the project can be found <a href="http://nitishgupta.github.io/docs/yelp-factordb.pdf">here</a>
+<a id="the-report-for-the-project-can-be-found-here" class="anchor" href="#the-report-for-the-project-can-be-found-here" aria-hidden="true"><span class="octicon octicon-link"></span></a>The report for the project can be found <a href="yelp-factordb.pdf">here</a>
 </h3>
       </section>
     </div>
